# necessist

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  env.sh  rustfmt.toml
backends/: Cargo.toml  build.rs
backends/assets/: README.txt
backends/src/: generic_visitor.rs  lib.rs  parsing.rs  running.rs  tree_sitter_utils.rs
backends/src/anchor/: mod.rs
backends/src/anchor_ts/: mod.rs
backends/src/foundry/: README.md  mod.rs
backends/src/foundry/visitor/: mod.rs  visit.rs
backends/src/go/: bounded_cursor.rs  mod.rs  visitor.rs
backends/src/hardhat/: mod.rs
backends/src/hardhat_ts/: mod.rs
backends/src/php/: mod.rs  storage.rs  visitor.rs
backends/src/phpunit/: mod.rs  visitor.rs
backends/src/rust/: mod.rs  storage.rs  try_insert.rs  visitor.rs
backends/src/ts/: mocha.rs  mod.rs  utils.rs  vitest.rs
backends/src/ts/inner/: mod.rs  visitor.rs
backends/src/ts/mocha/: mod.rs  visitor.rs
backends/src/vitest/: mod.rs
cargo-necessist/: Cargo.toml  cargo_necessist.stdout  console.stdout  sqlite.stdout
cargo-necessist/src/: create_table_removal.sql  lib.rs
cargo-necessist/tests/: proptest_urls.rs  proptest_urls.sh
common/: Cargo.toml  README.md
common/src/: lib.rs
core/: Cargo.toml
core/src/: backup.rs  cli.rs  config.rs  core.rs  create_table_removal.sql  drop_table_removal.sql  flock.rs  lib.rs  outcome.rs  rewriter.rs  source_file.rs  span.rs  sqlite.rs  to_console_string.rs  util.rs  warn.rs
core/src/framework/: auto.rs  empty.rs  mod.rs  union.rs
core/src/framework/impls/: mod.rs
core/src/offset_based_rewriter/: impls.rs  mod.rs
core/src/offset_calculator/: impls.rs  mod.rs
core/tests/: ci.rs  ci_nightly.rs  crates_io.rs  dogfood.rs  general.rs  parsing.rs  sqlite_urls.rs  trycmd.rs
core/tests/ci_is/: disabled.rs  enabled.rs  mod.rs
core/tests/ci_nightly_is/: disabled.rs  enabled.rs  mod.rs
core/tests/necessist_db_absent/: basic_framework_rust_timeout.toml  basic_framework_z.stderr  basic_framework_z.toml  basic_timeout.toml  basic_timeout_quiet.toml  basic_timeout_verbose.toml  cfg.toml  cfg_deny_run_test_failed.toml  failure.stdout  failure.toml  failure_no_dry_run.toml  failure_test_file.toml  invalid_utf8.stdout  invalid_utf8.toml
core/tests/necessist_db_present/: basic_dump.toml  basic_dump_verbose.toml  basic_reset_timeout.toml  basic_resume.toml
crates_io/: Cargo.toml
crates_io/src/: main.rs
frameworks/: Cargo.toml  build.rs  clippy.toml
frameworks/assets/: README.txt
frameworks/src/: generic_visitor.rs  lib.rs  parsing.rs  running.rs  ts_utils.rs  utils.rs
frameworks/src/anchor_ts/: mod.rs  rfc8032_test_vector.json
frameworks/src/foundry/: mod.rs  storage.rs  visitor.rs
frameworks/src/foundry/visitor/: mod.rs  visit.rs
frameworks/src/go/: bounded_cursor.rs  mod.rs  visitor.rs
frameworks/src/golang/: mod.rs  visitor.rs
frameworks/src/hardhat_ts/: mod.rs  visitor.rs
frameworks/src/rust/: mod.rs  parsing.rs  storage.rs  try_insert.rs  visitor.rs
frameworks/src/ts/: mod.rs  utils.rs
macro/: Cargo.toml  README.md
macro/src/: lib.rs
necessist/: Cargo.toml  README.md  build.rs
necessist/src/: main.rs
necessist/src/backends/: mod.rs
necessist/src/framework/: mod.rs
necessist/src/frameworks/: mod.rs
necessist/tests/: README.md  ci.rs  ci_is_disabled.rs  dogfood.rs  general.rs  markdown_link_check.json  parsing.rs  sqlite_urls.rs  supply_chain.json  tempfile_util.rs  third_party.rs  third_party_0.rs  third_party_1.rs  third_party_2.rs  third_party_common.rs  trycmd.rs
necessist/tests/necessist_db_absent/: basic_dump_fail.stderr  basic_dump_fail.toml  basic_framework_anchor-ts.stderr  basic_framework_anchor-ts.toml  basic_framework_hardhat-ts.stderr  basic_framework_hardhat-ts.toml  basic_framework_rust_timeout.stdout  basic_framework_rust_timeout.toml  basic_framework_z.stderr  basic_framework_z.toml  basic_reset_warn.stderr  basic_reset_warn.toml  basic_resume_warn.stderr  basic_resume_warn.toml  basic_timeout.stdout  basic_timeout.toml  basic_timeout_quiet.toml  basic_timeout_verbose.stdout  basic_timeout_verbose.toml  block_ending_in_expression_no_local_functions_verbose.toml  block_ending_in_expression_verbose.stdout  block_ending_in_expression_verbose.toml  cfg.stdout  cfg.toml  cfg_deny_run_test_failed.stderr  cfg_deny_run_test_failed.stdout  cfg_deny_run_test_failed.toml  cli_dir_input-mixed.stdout  cli_dir_input-mixed.toml  cli_dir_input.stdout  cli_dir_input.toml  cli_input.stdout  cli_input.toml  cli_input_mixed.stdout  cli_input_mixed.toml  dry_run_failure.stdout  dry_run_failure.toml  dry_run_failure_no_dry_run.stdout  dry_run_failure_no_dry_run.toml  dry_run_failure_test_file.stdout  (+32 more)
necessist/tests/necessist_db_present/: basic_dump.stdout  basic_dump.toml  basic_dump_verbose.stdout  basic_dump_verbose.toml  basic_no_flag_fail.stderr  basic_no_flag_fail.toml  basic_reset_timeout.stdout  basic_reset_timeout.toml  basic_resume.stdout  basic_resume.toml
necessist/tests/third_party_common/: mod.rs  string_or_vec.rs
necessist/tests/third_party_tests/: chainlink.stdout  chainlink.toml  chainlink_foundry.stdout  chainlink_foundry.toml  chainlink_hardhat-ts.stdout  chainlink_hardhat-ts.with_config.stdout  chainlink_hardhat-ts.without_config.stdout  diem.stdout  diem.without_config.stdout  go_src_encoding_base64.stdout  go_src_encoding_base64.toml  go_src_encoding_binary.stdout  go_src_encoding_binary.toml  go_src_mime.stdout  go_src_mime.toml  go_src_net_url.stdout  go_src_net_url.toml  go_src_os_user.stdout  go_src_os_user.toml  go_src_testing_iotest.stdout  go_src_testing_iotest.toml  go_src_text_template_parse.stdout  go_src_text_template_parse.toml  minio.stdout  minio.toml  minio.without_config.stdout  operator-filter-registry.stdout  operator-filter-registry.toml  operator-filter-registry.with_config.stdout  operator-filter-registry.without_config.stdout  proptest_https.stdout  proptest_ssh.toml  rusoto.stdout  rusoto.without_config.stdout  seaport.stdout  seaport.toml  seaport.with_config.stdout  seaport.without_config.stdout  v3-core.stdout  v3-core.toml  (+4 more)
(+242 files in other folders)
