[workspace]
members = ["backends", "core", "necessist"]
resolver = "2"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
let-underscore-untyped = "warn"
format-collect = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
mutable-key-type = "allow"
struct-field-names = "allow"

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/trailofbits/dylint"
pattern = [
    "examples/general",
    "examples/supplementary",
    "examples/restriction/assert_eq_arg_misordering",
    "examples/restriction/collapsible_unwrap",
    "examples/restriction/const_path_join",
    "examples/restriction/inconsistent_qualification",
    "examples/restriction/misleading_variable_name",
    "examples/restriction/question_mark_in_expression",
    "examples/restriction/ref_aware_redundant_closure_for_method_calls",
    "examples/restriction/suboptimal_pattern",
]

[workspace.metadata.unmaintained]
ignore = [
    "paste",
    "smartstring",
    "solang-parser",
    "unit-prefix",
    # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
    "utf8parse",
    # https://github.com/wasm-bindgen/wasm-bindgen/blob/8f2792238edbe808ba9e1eecc1c44032f28a66b1/CHANGELOG.md?plain=1#L13
    "wasm-bindgen-backend",
]
