[package]
name = "necessist-backends"
version = "1.0.0"
edition = "2021"

description = "necessist-backends"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

build = "build/main.rs"

[dependencies]
necessist-core = { version = "=1.0.0", path = "../core" }

anyhow = "1.0"
assert_cmd = "2.0"
bstr = "1.11"
clap = { version = "4.5", features = ["derive"] }
heck = "0.5"
if_chain = "1.0"
indexmap = "2.7"
log = "0.4"
once_cell = "1.20"
paste = "1.0"
regex = "1.11"
remain = "0.2"
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
strip-ansi-escapes = "0.2"
subprocess = "0.2"
walkdir = "2.5"

# Anchor TS
toml_edit = "0.22"
# Also, swc_core, listed below under Hardhat TS.

# Foundry
# smoelius: New `solang-parser` releases may contain breaking changes:
# https://github.com/hyperledger/solang/pull/1213
solang-parser = { version = "=0.3.4", features = ["pt-serde"] }

# Go
streaming-iterator = "0.1"
tree-sitter = "0.24"
tree-sitter-go = "0.23"

# Hardhat TS
swc_core = { version = "9.0", features = [
    "common",
    "ecma_ast",
    "ecma_parser",
    "ecma_visit",
] }

# Rust
cargo_metadata = "0.19"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
curl = "0.4"
tempfile = "3.14"

[build-dependencies]
heck = "0.5"
proc-macro2 = "1.0"
syn = "2.0"

[lints]
workspace = true
