[package]
name = "necessist-backends"
version = "2.1.1"
edition = "2024"

description = "necessist-backends"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

build = "build/main.rs"

[dependencies]
necessist-core = { version = "=2.1.1", path = "../core" }

anyhow = "1.0"
assert_cmd = "2.0"
bstr = "1.12"
clap = { version = "4.5", features = ["derive"] }
heck = "0.5"
indexmap = "2.11"
log = "0.4"
once_cell = "1.21"
paste = "1.0"
regex = "1.11"
remain = "0.2"
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
strip-ansi-escapes = "0.2"
subprocess = "0.2"
walkdir = "2.5"

# Anchor
toml_edit = "0.23"
# Also, swc_core, listed below under Hardhat.

# Foundry
# smoelius: New `solang-parser` releases may contain breaking changes:
# https://github.com/hyperledger/solang/pull/1213
solang-parser = { version = "=0.3.5", features = ["pt-serde"] }

# Go
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-go = "0.25"

# Hardhat
swc_core = { version = "38.0", features = [
    "common",
    "ecma_ast",
    "ecma_parser",
    "ecma_visit",
] }

# Rust
cargo_metadata = "0.19"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
curl = "0.4"
tempfile = "3.21"

[build-dependencies]
heck = "0.5"
proc-macro2 = "1.0"
syn = "2.0"

[lints]
workspace = true
