[package]
name = "necessist-common"
version = "0.1.0-alpha.0"
edition = "2018"

description = "necessist-common"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/necessist"

[dependencies]
anyhow = "1.0.33"
proc-macro2 = { version = "1.0.24", features = ["span-locations"] }
