[package]
name = "necessist-core"
version = "0.2.0"
edition = "2021"

description = "necessist-core"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
bitflags = "2.3"
clap = { version = "4.3", features = ["cargo", "derive"], optional = true }
ctrlc = "3.4"
diesel = { version = "2.1", features = ["sqlite"] }
git2 = "0.17"
heck = "0.4"
indicatif = "0.17"
is-terminal = "0.4"
log = "0.4"
once_cell = "1.18"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1.9"
remain = "0.2"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
subprocess = "0.2"
tempfile = "3.6"
toml = "0.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
cargo_metadata = "0.15"
curl = "0.4"
heck = "0.4"
syn = "2.0"
