[package]
name = "necessist-core"
version = "0.6.3"
edition = "2021"

description = "necessist-core"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
bitflags = "2.6"
clap = { version = "4.5", features = ["cargo", "derive"], optional = true }
ctrlc = "3.4"
diesel = { version = "2.2", features = ["sqlite"] }
dunce = "1.0"
git2 = "0.19"
heck = "0.5"
hex = "0.4"
indexmap = "2.2"
indicatif = "0.17"
itertools = "0.13"
log = "0.4"
once_cell = "1.19"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1.10"
remain = "0.2"
rewriter = { version = "0.1", features = ["proc-macro2-impl"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
strum = "0.26"
strum_macros = "0.26"
subprocess = "0.2"
tempfile = "3.11"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }
rlimit = { version = "0.10", optional = true }

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[build-dependencies]
cargo_metadata = "0.18"
curl = "0.4"
heck = "0.5"
syn = "2.0"

[features]
default = ["limit_threads", "lock_root"]
limit_threads = ["rlimit"]
lock_root = ["libc", "windows-sys"]

[lints]
workspace = true
