[package]
name = "necessist"
version = "0.1.0-beta.7"
edition = "2021"

description = "necessist"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
necessist-core = { version = "=0.1.0-beta.7", path = "../core", features = ["clap"] }
necessist-frameworks = { version = "=0.1.0-beta.7", path = "../frameworks" }

anyhow = "1.0"
clap = { version = "4.1", features = ["cargo", "derive"] }
env_logger = "0.10"

[workspace]
