[package]
name = "necessist"
version = "0.2.2"
edition = "2021"

description = "necessist"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
necessist-core = { version = "=0.2.2", path = "../core", features = ["clap"] }
necessist-frameworks = { version = "=0.2.2", path = "../frameworks" }

anyhow = { version = "1.0", features = ["backtrace"] }
clap = "4.3"
env_logger = "0.10"

[workspace]
