[package]
name = "necessist-frameworks"
version = "0.1.0-beta.9"
edition = "2021"

description = "necessist-frameworks"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
necessist-core = { version = "=0.1.0-beta.9", path = "../core" }

anyhow = "1.0"
assert_cmd = "2.0"
bstr = "1.3"
clap = { version = "4.2", features = ["derive"] }
heck = "0.4"
if_chain = "1.0"
lazy_static = "1.4"
log = "0.4"
regex = "1.8"
remain = "0.2"
strum = "0.24"
strum_macros = "0.24"
subprocess = "0.2"
thiserror = "1.0"
walkdir = "2.3"

# Foundry
# smoelius: New `solang-parser` releases may contain breaking changes:
# https://github.com/hyperledger/solang/pull/1213
solang-parser = "=0.2.4"

# Golang
tree-sitter = "0.20"
tree-sitter-go = "0.19"

# Hardhat TS
swc_core = { version = "0.75", features = ["common", "ecma_ast", "ecma_parser", "ecma_visit"] }

# Rust
cargo_metadata = "0.15"
syn = { version = "2.0", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
curl = "0.4"

[build-dependencies]
cargo_metadata = "0.15"
curl = "0.4"
heck = "0.4"
syn = "2.0"
