[package]
name = "necessist-frameworks"
version = "0.1.0"
edition = "2021"

description = "necessist-frameworks"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
necessist-core = { version = "=0.1.0", path = "../core" }

anyhow = "1.0"
assert_cmd = "2.0"
bstr = "1.5"
clap = { version = "4.3", features = ["derive"] }
heck = "0.4"
if_chain = "1.0"
log = "0.4"
once_cell = "1.17"
paste = "1.0"
regex = "1.8"
remain = "0.2"
strum = "0.24"
strum_macros = "0.24"
subprocess = "0.2"
thiserror = "1.0"
walkdir = "2.3"

# Foundry
# smoelius: New `solang-parser` releases may contain breaking changes:
# https://github.com/hyperledger/solang/pull/1213
solang-parser = "=0.3.0"

# Go
tree-sitter = "0.20"
tree-sitter-go = "0.19"

# Hardhat TS
swc_core = { version = "0.76", features = ["common", "ecma_ast", "ecma_parser", "ecma_visit"] }

# Rust
cargo_metadata = "0.15"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
curl = "0.4"

[build-dependencies]
cargo_metadata = "0.15"
curl = "0.4"
heck = "0.4"
syn = "2.0"
