[package]
name = "necessist-frameworks"
version = "0.3.1"
edition = "2021"

description = "necessist-frameworks"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
necessist-core = { version = "=0.3.1", path = "../core" }

anyhow = "1.0"
assert_cmd = "2.0"
bstr = "1.7"
clap = { version = "4.4", features = ["derive"] }
heck = "0.4"
if_chain = "1.0"
log = "0.4"
once_cell = "1.18"
paste = "1.0"
regex = "1.9"
remain = "0.2"
strum = "0.25"
strum_macros = "0.25"
subprocess = "0.2"
walkdir = "2.4"

# Anchor TS
toml_edit = "0.20"
# Also, swc_core, listed below under Hardhat TS.

# Foundry
# smoelius: New `solang-parser` releases may contain breaking changes:
# https://github.com/hyperledger/solang/pull/1213
solang-parser = "=0.3.2"

# Go
tree-sitter = "0.20"
tree-sitter-go = "0.20"

# Hardhat TS
swc_core = { version = "0.84", features = ["common", "ecma_ast", "ecma_parser", "ecma_visit"] }

# Rust
cargo_metadata = "0.18"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
curl = "0.4"

[build-dependencies]
cargo_metadata = "0.18"
curl = "0.4"
heck = "0.4"
syn = "2.0"
