[package]
name = "necessist-macro"
version = "0.1.0-alpha.0"
edition = "2018"

description = "necessist-macro"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/necessist"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "1.0.44", features = ["full", "visit-mut"] }

necessist-common = { path = "../common" }
