[package]
name = "necessist"
version = "0.7.1"
edition = "2021"

description = "necessist"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
necessist-backends = { version = "=0.7.1", path = "../backends" }
necessist-core = { version = "=0.7.1", path = "../core", features = ["clap"] }

anyhow = { version = "1.0", features = ["backtrace"] }
clap = "4.5"
env_logger = "0.11"
heck = "0.5"
remain = "0.2"
strum = "0.26"
strum_macros = "0.26"
subprocess = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
cargo_metadata = "0.18"
ctor = "0.2"
curl = "0.4"
dunce = "1.0"
once_cell = "1.20"
predicates = "3.1"
regex = "1.11"
serde = "1.0"
serde-untagged = "0.1"
similar-asserts = "1.6"
tempfile = "3.14"
toml = "0.8"
trycmd = "0.15"
walkdir = "2.5"

[features]
default = []
dogfood = []

[lints]
workspace = true
