[package]
name = "necessist"
version = "2.1.3"
edition = "2024"

description = "necessist"

authors = ["Samuel Moelius <sam@moeli.us>"]
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/necessist"

[dependencies]
necessist-backends = { version = "=2.1.3", path = "../backends" }
necessist-core = { version = "=2.1.3", path = "../core", features = ["clap"] }

anyhow = { version = "1.0", features = ["backtrace"] }
clap = "4.5"
env_logger = "0.11"
heck = "0.5"
remain = "0.2"
strum = "0.27"
strum_macros = "0.27"
subprocess = "0.2"

[dev-dependencies]
assert_cmd = "2.1"
cargo_metadata = "0.23"
ctor = "0.6"
curl = "0.4"
dunce = "1.0"
predicates = "3.1"
regex = "1.12"
serde = "1.0"
serde_json = "1.0"
serde-untagged = "0.1"
similar-asserts = "1.7"
tempfile = "3.24"
toml = "0.9"
trycmd = "0.15"
walkdir = "2.5"

[features]
default = []
dogfood = []

[lints]
workspace = true
